RESOLVED FIXED148154
REGRESSION(r188548): [GTK] Build broken.
https://bugs.webkit.org/show_bug.cgi?id=148154
Summary REGRESSION(r188548): [GTK] Build broken.
Carlos Alberto Lopez Perez
Reported 2015-08-18 17:25:46 PDT
r188548 <http://trac.webkit.org/r188548> broke the GTK build. This was unnoticed until http://trac.webkit.org/changeset/188589 because WTR was not being built. The build error is: [12/157] Linking CXX executable bin/WebKitTestRunner FAILED: : && /usr/lib/ccache/clang++ -std=c++11 -fcolor-diagnostics -Qunused-arguments -O3 -DNDEBUG -fno-exceptions -fno-strict-aliasing -fno-rtti -L/home/clopez/webkit/webkit/WebKitBuild/DependenciesGTK/Root/lib64 -fuse-ld=gold -Wl,--disable-new-dtags @CMakeFiles/WebKitTestRunner.rsp -o bin/WebKitTestRunner && : Tools/WebKitTestRunner/CMakeFiles/WebKitTestRunner.dir/TestController.cpp.o:/home/clopez/webkit/.ccache/tmp/TestContro.tmp.trinity.14155.ii:function WTR::TestController::ensureViewSupportsOptionsForTest(WTR::TestInvocation const&): error: undefined reference to 'WTR::TestController::updatePlatformSpecificViewOptionsForTest(WTR::ViewOptions&, WTR::TestInvocation const&) const' Tools/WebKitTestRunner/CMakeFiles/WebKitTestRunner.dir/TestController.cpp.o:/home/clopez/webkit/.ccache/tmp/TestContro.tmp.trinity.14155.ii:function WTR::TestController::viewOptionsForTest(WTR::TestInvocation const&) const: error: undefined reference to 'WTR::TestController::updatePlatformSpecificViewOptionsForTest(WTR::ViewOptions&, WTR::TestInvocation const&) const' clang: error: linker command failed with exit code 1 (use -v to see invocation) ninja: build stopped: subcommand failed. https://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release%20%28Build%29/builds/61366/steps/compile-webkit/logs/stdio
Attachments
Patch (1.91 KB, patch)
2015-08-18 17:42 PDT, Carlos Alberto Lopez Perez
no flags
Patch (1.91 KB, patch)
2015-08-18 17:45 PDT, Carlos Alberto Lopez Perez
no flags
Patch (1.39 KB, patch)
2015-08-18 18:13 PDT, Carlos Alberto Lopez Perez
no flags
Carlos Alberto Lopez Perez
Comment 1 2015-08-18 17:42:38 PDT
Carlos Alberto Lopez Perez
Comment 2 2015-08-18 17:45:04 PDT
Created attachment 259334 [details] Patch Fix typo in changelog.
Martin Robinson
Comment 3 2015-08-18 17:46:38 PDT
Comment on attachment 259334 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=259334&action=review > Tools/WebKitTestRunner/gtk/TestControllerGtk.cpp:135 > +#if USE(COORDINATED_GRAPHICS) > + if (test.urlContains("sticky/") || test.urlContains("sticky\\")) > + return true; > +#endif Why USE(COORDINATED_GRAPHICS) here?
Carlos Alberto Lopez Perez
Comment 4 2015-08-18 17:49:23 PDT
(In reply to comment #3) > Comment on attachment 259334 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=259334&action=review > > > Tools/WebKitTestRunner/gtk/TestControllerGtk.cpp:135 > > +#if USE(COORDINATED_GRAPHICS) > > + if (test.urlContains("sticky/") || test.urlContains("sticky\\")) > > + return true; > > +#endif > > Why USE(COORDINATED_GRAPHICS) here? No idea, i just copied this from http://trac.webkit.org/changeset/188548/trunk/Tools/WebKitTestRunner/efl/TestControllerEfl.cpp Do you think I should remove that #ifdef and always return false? or just remove the #ifdef but keep the 'test.urlContains("sticky")' check?
Martin Robinson
Comment 5 2015-08-18 17:52:54 PDT
It looks like this originated from the deleted code and shouldn't be applied to WebKitGTK+: http://trac.webkit.org/changeset/188548/trunk/Tools/WebKitTestRunner/TestController.cpp
Carlos Alberto Lopez Perez
Comment 6 2015-08-18 18:13:23 PDT
Carlos Alberto Lopez Perez
Comment 7 2015-08-18 18:38:00 PDT
Comment on attachment 259336 [details] Patch Clearing flags on attachment: 259336 Committed r188620: <http://trac.webkit.org/changeset/188620>
Carlos Alberto Lopez Perez
Comment 8 2015-08-18 18:38:08 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.