REGRESSION(r188548): [GTK] Build broken. https://bugs.webkit.org/show_bug.cgi?id=148154

Reviewed by Martin Robinson.

* WebKitTestRunner/gtk/TestControllerGtk.cpp:
(WTR::TestController::updatePlatformSpecificViewOptionsForTest):
Even if we don't need to add/override any settings in ViewOptions,
we need to define this as an empty function to make it build.

Canonical link: https://commits.webkit.org/166278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188620 268f45cc-cd09-0410-ab3c-d52691b4dbfc